@startuml
package br.univille.projfabsoft_despesas.entity {
    class GrupoFamiliar {
        - long id
        - String nome
        - List<Usuario> usuarios
        --
        + long getId()
        + void setId(long id)
        + String getNome()
        + void setNome(String nome)
        + List<Usuario> getUsuarios()
        + void setUsuarios(List<Usuario> usuarios)
    }

    class Usuario {
        - long id
        - String nome
        - String email
        - Double renda
        --
        + long getId()
        + void setId(long id)
        + String getNome()
        + void setNome(String nome)
        + String getEmail()
        + void setEmail(String email)
        + Double getRenda()
        + void setRenda(Double renda)
    }

    class Despesa {
        - long id
        - String descricao
        - Double valor
        - Date dataVencimento
        - List<Usuario> usuariosResponsaveis
        --
        + long getId()
        + void setId(long id)
        + String getDescricao()
        + void setDescricao(String descricao)
        + Double getValor()
        + void setValor(Double valor)
        + Date getDataVencimento()
        + void setDataVencimento(Date dataVencimento)
        + List<Usuario> getUsuariosResponsaveis()
        + void setUsuariosResponsaveis(List<Usuario> usuariosResponsaveis)
    }

    class Notificacao {
        - long id
        - String mensagem
        - LocalDate data
        - Despesa despesa
        - Usuario usuario
        --
        + long getId()
        + void setId(long id)
        + String getMensagem()
        + void setMensagem(String mensagem)
        + LocalDate getData()
        + void setData(LocalDate data)
        + Despesa getDespesa()
        + void setDespesa(Despesa despesa)
        + Usuario getUsuario()
        + void setUsuario(Usuario usuario)
    }

    GrupoFamiliar "1" *-- "0..*" Usuario
    Usuario "1" *-- "0..*" Despesa
    Despesa "1" *-- "0..*" Usuario
    Notificacao "1" --> "1" Usuario
    Notificacao "1" --> "1" Despesa
}
@enduml